<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">Gestor</string>

    <!-- Opciones de perfil -->
    <string-array name="opcionesPerfil">
        <item></item>
        <item>Ajustes</item>
        <item>Perfil</item>
        <item>Cerrar Sesión</item>
    </string-array>

    <!-- Opciones de idiomas -->
    <string-array name="idiomas">
        <item>Español</item>
        <item>Gallego</item>
    </string-array>
    <string name="notification_message_registro">" registrado exitosamente"</string>
    <string name="notification_title_registro">Registro</string>
    <string name="selecIdioma">Seleccione un idioma</string>
    <string name="confirmar">Confirmar</string>
    <string name="volver">Volver</string>
    <string name="nArmaPersonaje">Nueva arma para el personaje</string>
    <string name="insertarIP">Ingrese la IP</string>
    <string name="nombreP">Nombre del personaje:</string>
    <string name="nombreU">Nombre del usuario:</string>
    <string name="fuerza">Fuerza</string>
    <string name="destreza">Destreza</string>
    <string name="ingerseNombre">Ingrese el nombre</string>
    <string name="ingreseFuerza">Ingrese fuerza</string>
    <string name="ingreseDestreza">Ingrese Destreza</string>
    <string name="constritucion">Constitución</string>
    <string name="ingreseConstitucion">Ingrese Constitución</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="ingreseInteligencia">Ingrese Inteligencia</string>
    <string name="sabiduria">Sabiduría</string>
    <string name="ingreseSabiduria">Ingrese Sabiduria</string>
    <string name="carisma">Carisma</string>
    <string name="ingreseCarisma">Ingrese Carisma</string>
    <string name="competencia">Competencia</string>
    <string name="ingreseCompetencia">Ingrese Competencia</string>
    <string name="urlFoto">URL de la foto:</string>
    <string name="ingreseUrl">Ingrese URL</string>
    <string name="nombre">Nombre</string>
    <string name="nombreA">Nombre del arma:</string>
    <string name="ataqueT">Ataque total:</string>
    <string name="ataque">Ataque</string>
    <string name="bonificadorAdic">Bonificador adicional:</string>
    <string name="bonificador">Bonificador</string>
    <string name="ver">Ver</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarS">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="configuracion">Configuración</string>
    <string name="armas">Armas</string>
    <string name="personajes">Personajes</string>
    <string name="estadoU">Estado del usuario</string>
    <string name="estado">Estado</string>
    <string name="fotoP">Foto de Perfil</string>
    <string name="cambiarFoto">Cambiar Foto</string>
    <string name="nuevaContr">Nueva contraseña</string>
    <string name="confirmarNuevaContr">Confirmar Nueva Contraseña</string>
    <string name="nuevoP">Nuevo Personaje</string>
    <string name="ataquePuntos">Ataque:</string>
    <string name="base">Base</string>
    <string name="danho">Daño</string>
    <string name="danhoPuntos">Daño:</string>
    <string name="tipoPuntos">Tipo:</string>
    <string name="tipo">Tipo</string>
    <string name="arrojadizaPuntos">Arrojadiza:</string>
    <string name="arrojadiza">Arrojadiza</string>
    <string name="caracteristicaPuntos">Caracteristica:</string>
    <string name="caracteristica">Caracteristica</string>
    <string name="caracteristicasPuntos">Caracteristicas:</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="competenciaPuntos">Competencia:</string>
    <string name="usuarioPuntos">Usuario:</string>
    <string name="bono">Bono</string>
    <string name="fuerzaPuntos">Fuerza:</string>
    <string name="destrezaPuntos">Destreza:</string>
    <string name="inteligenciaPuntos">Inteligancia:</string>
    <string name="sabiduriaPuntos">Sabiduría:</string>
    <string name="carismaPuntos">Carisma:</string>
    <string name="constitucion">Constitucion</string>
    <string name="constitucionPuntos">Constitucion:</string>
    <string name="error_Arma">Error al obtener armas</string>
    <string name="error_Parsear">Error al parsear la respuesta del servidor</string>
    <string name="error_Buscar_Arma">Error al buscar el arma</string>
    <string name="error_Lista_ArmaPersonaje">Error al cargar la lista de armas del personaje</string>
    <string name="error_Buscar_ArmaPersonaje">Error al buscar el arma por sus IDs</string>
    <string name="error_Equipada_ArmaPersonaje">El personaje ya tiene equipada el arma</string>
    <string name="error_Crear_ArmaPersonaje">Error al crear los parámetros del arma-personaje</string>
    <string name="Success_Equipada_ArmaPersonaje">Arma equipada exitosamente</string>
    <string name="Success_Desequipada_ArmaPersonaje">Arma desequipada</string>
    <string name="error_Desequipar_ArmaPersonaje">Error al desequipar el arma del personaje</string>
    <string name="error_Buscar_Personaje">Error al obtener personajes</string>
    <string name="error_Eliminar_Personaje">Error al eliminar el personaje</string>
    <string name="error_Json_Personaje">Error al crear JSON para el personaje</string>
    <string name="error_Actualizar_Personaje">Error al actualizar el personaje</string>
    <string name="Success_Actualizar_Personaje">Personaje actualizado exitosamente</string>
    <string name="Success_Crear_Personaje">Personaje creado exitosamente</string>
    <string name="error_Crear_Personaje">Error al crear el personaje</string>
    <string name="error_Buscar_Usuario">Error al buscar el usuario</string>
    <string name="error_Respuesta_Servidor">Respuesta del servidor no válida</string>
    <string name="error_Procesar_Datos">Error de procesamiento de datos</string>
    <string name="error_LoginIncorecto_Usuario">Nombre de usuario o contraseña incorrectos</string>
    <string name="error_Desconocido">Error desconocido</string>
    <string name="error_CrearDatos_Usuario">Error al crear los datos del usuario</string>
    <string name="error_Crear_Usuario">Fallo al registrar el usuario</string>
    <string name="error_Conectar_Servidor">Error al conectar con el servidor</string>
    <string name="error_Actualizar_Usuario">Error al actualizar los datos</string>
    <string name="eliminar_ArmaPersonaje">Eliminar Arma del Personaje</string>
    <string name="preguntarEliminar">"¿Estás seguro de que quieres eliminar "</string>
    <string name="del_Personaje">" del personaje?"</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="confGuardada">Configuración guardada</string>
    <string name="nombreVacio">El nombre no puede estar vacío</string>
    <string name="competenciaMal">La competencia debe ser un número entre 2 y 6</string>
    <string name="carismaMal">El carisma debe ser un número entre 1 y 30</string>
    <string name="sabiduriaMal">La sabiduría debe ser un número entre 1 y 30</string>
    <string name="inteligenciaMal">La inteligencia debe ser un número entre 1 y 30</string>
    <string name="constitucionMal">La constitución debe ser un número entre 1 y 30</string>
    <string name="destrezaMal">La destreza debe ser un número entre 1 y 30</string>
    <string name="fuerzaMal">La fuerza debe ser un número entre 1 y 30</string>
    <string name="bonificadorAdicMal">El valor de bonificación adicional debe ser numérico</string>
    <string name="inicioSesion">Inicio de sesión exitoso</string>
    <string name="contraseñaMalTamanho">La contraseña debe tener entre 5 y 13 caracteres</string>
    <string name="contraseñaMalCoincidencia">Las contraseñas no coinciden</string>
    <string name="datosActualizados">Datos actualizados exitosamente</string>
    <string name="eliminar_Personaje">Eliminar Personaje</string>
    <string name="mensajeEliminar_Personaje1">"¿Estás seguro de que quieres eliminar el personaje "</string>
    <string name="mensajeEliminar_Personaje2">\? Tambien se eliminaran todas las armas que el personaje tiene equipadas.</string>
    <string name="relleneCampos">Por favor, rellene todos los campos</string>
    <string name="correoMal">Por favor, ingrese un correo electrónico válido</string>
    <string name="contrasenhaMal">La contraseña debe tener entre 5 y 13 caracteres alfanuméricos</string>


</resources>

