<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Nombre del arma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombreA" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            style="@style/TextViewStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ataquePuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtAtaque"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/base"
            style="@style/TextViewStyle" />


    </LinearLayout>

    <!-- Danho -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/danhoPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtDanho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/danho"
            style="@style/TextViewStyle" />

    </LinearLayout>

    <!-- Tipo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipoPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo"
            style="@style/TextViewStyle" />


    </LinearLayout>
    <!-- Arrojadiza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrojadizaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtArrojadiza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrojadiza"
            style="@style/TextViewStyle" />


    </LinearLayout>
    <!-- Caracteristica -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caracteristicaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtCaracteristica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caracteristica"
            style="@style/TextViewStyle" />


    </LinearLayout>
    <!-- Caracteristicas -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caracteristicasPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtCaracteristicas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caracteristicas"
            style="@style/TextViewStyle" />
    </LinearLayout>
    <!-- Foto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textFoto"
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/urlFoto" />

        <TextView
            android:id="@+id/txtFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingreseUrl"
            style="@style/TextViewStyle"/>

    </LinearLayout>

    <!-- Botones -->
    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        style="@style/ButtonStyle"
        android:layout_gravity="center"/>

</LinearLayout>