<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Nombre del Usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textUsuario"
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombreU"
            />

        <TextView
            android:id="@+id/textNombreUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Usuario"
            android:layout_weight="1"
            style="@style/TextViewStyle"/>


    </LinearLayout>

    <!-- Nombre del personaje -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreP"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingerseNombre"
            style="@style/EditTextStyle"/>

    </LinearLayout>

    <!-- Fuerza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textFuerza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fuerzaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editFuerza"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseFuerza" />

    </LinearLayout>

    <!-- Destreza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textDestreza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/destrezaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editDestreza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseDestreza"
            style="@style/EditTextStyle"/>

    </LinearLayout>
    <!-- Constitucion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textConstitucion"
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constitucionPuntos" />

        <EditText
            android:id="@+id/editConstitucion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseConstitucion"
            style="@style/EditTextStyle"/>

    </LinearLayout>
    <!-- Inteligencia -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textInteligencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/inteligenciaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editInteligencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseInteligencia"
            style="@style/EditTextStyle"/>

    </LinearLayout>
    <!-- Sabiduria -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textSabiduria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sabiduriaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editSabiduria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseSabiduria"
            style="@style/EditTextStyle"
            />

    </LinearLayout>
    <!-- Carisma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textCarisma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carismaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editCarisma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseCarisma"
            style="@style/EditTextStyle"/>

    </LinearLayout>
    <!-- Competencia -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textCompetencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/competenciaPuntos"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editCompetencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseCompetencia"
            style="@style/EditTextStyle"/>

    </LinearLayout>
    <!-- Foto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/urlFoto"
            android:layout_weight="1"
            style="@style/TextViewStyleNegrita"/>

        <EditText
            android:id="@+id/editFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ingreseUrl"
            style="@style/EditTextStyle"/>

    </LinearLayout>

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</LinearLayout>

