<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Nombre del Usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usuarioPuntos" />

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_weight="1"
            style="@style/TextViewStyle"/>

    </LinearLayout>

    <!-- Nombre del personaje -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreP"
            style="@style/TextViewStyleNegrita"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            style="@style/TextViewStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caracteristicas"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/base"
            android:gravity="center"

            style="@style/TextViewStyleNegrita" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            android:gravity="center"
            style="@style/TextViewStyleNegrita"/>

    </LinearLayout>

    <!-- Fuerza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fuerzaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtFuerza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fuerza"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoFuerza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>

    <!-- Destreza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destrezaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtDestreza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destreza"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoDestreza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>
    <!-- Constitucion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constritucion"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtConstitucion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constritucion"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoConstitucion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>
    <!-- Inteligencia -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inteligenciaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtInteligencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inteligencia"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoInteligencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>
    <!-- Sabiduria -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabiduriaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtSabiduria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabiduria"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoSabiduria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>
    <!-- Carisma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carismaPuntos"
            style="@style/TextViewStyleNegrita" />

        <TextView
            android:id="@+id/txtCarisma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carisma"
            style="@style/TextViewStyle" />

        <TextView
            android:id="@+id/txtBonoCarisma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bono"
            style="@style/TextViewStyle" />

    </LinearLayout>
    <!-- Competencia -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/competenciaPuntos"
            style="@style/TextViewStyleNegrita"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtCompetencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/competencia"
            style="@style/TextViewStyle"/>

    </LinearLayout>
    <!-- Foto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textFoto"
            style="@style/TextViewStyleNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/urlFoto" />

        <TextView
            android:id="@+id/txtFoto"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingreseUrl" />

    </LinearLayout>

    <!-- Botones -->
    <Button
        android:id="@+id/btnArmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/armas"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"/>



</LinearLayout>




